// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavListItem/> renders matching snapshot when active 1`] = `
<DocumentFragment>
  .c3 {
  display: inline-block;
  position: relative;
}

.c5 {
  opacity: 0;
  position: absolute;
  middle: 50%;
  left: 100%;
  margin-left: 13px;
  z-index: 1000;
  border-radius: 4px;
  background-color: rgb(76,98,114);
  padding: 5px;
  text-align: center;
  font-weight: 400;
  font-size: 18px;
  color: rgb(255,255,255);
}

.c2:hover .c4 {
  opacity: 1;
  -webkit-transition: opacity 0s linear 0.5s;
  transition: opacity 0s linear 0.5s;
}

.c5::after {
  position: absolute;
  bottom: 33%;
  left: -10%;
  margin-left: -2px;
  border-width: 5px;
  border-style: solid;
  border-color: transparent rgb(76,98,114) transparent transparent;
  content: " ";
}

.c0 {
  list-style-type: none;
  margin-bottom: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background: rgb(255,235,59);
  border-radius: 4px;
  width: 227px;
  margin-right: 4px;
  font-weight: 700;
}

.c1:hover {
  background-color: rgb(216,221,224);
}

.c1 a {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c1 a:focus {
  box-shadow: none;
}

.c1 img {
  padding-top: 2px;
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
  width: 24px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 div {
  padding-left: 4px;
  padding-right: 4px;
  color: rgb(33,43,50);
}

<li
    class="c0"
  >
    <div
      class="c1"
    >
      <a
        href="/workspaces/workspace-id/folders/folder-id"
      >
        <img
          src="/public/folderOpen.svg"
        />
        <div>
          folder title
        </div>
      </a>
    </div>
    <button>
      <div
        class="c2 c3"
      >
        <span
          class="c4 c5"
        >
          Options
        </span>
      </div>
    </button>
  </li>
</DocumentFragment>
`;

exports[`<NavListItem/> renders matching snapshot when not active 1`] = `
<DocumentFragment>
  .c3 {
  display: inline-block;
  position: relative;
}

.c5 {
  opacity: 0;
  position: absolute;
  middle: 50%;
  left: 100%;
  margin-left: 13px;
  z-index: 1000;
  border-radius: 4px;
  background-color: rgb(76,98,114);
  padding: 5px;
  text-align: center;
  font-weight: 400;
  font-size: 18px;
  color: rgb(255,255,255);
}

.c2:hover .c4 {
  opacity: 1;
  -webkit-transition: opacity 0s linear 0.5s;
  transition: opacity 0s linear 0.5s;
}

.c5::after {
  position: absolute;
  bottom: 33%;
  left: -10%;
  margin-left: -2px;
  border-width: 5px;
  border-style: solid;
  border-color: transparent rgb(76,98,114) transparent transparent;
  content: " ";
}

.c0 {
  list-style-type: none;
  margin-bottom: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background: inherit;
  border-radius: 4px;
  width: 227px;
  margin-right: 4px;
  font-weight: inherit;
}

.c1:hover {
  background-color: rgb(216,221,224);
}

.c1 a {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c1 a:focus {
  box-shadow: none;
}

.c1 img {
  padding-top: 2px;
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
  width: 24px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 div {
  padding-left: 4px;
  padding-right: 4px;
  color: rgb(33,43,50);
}

<li
    class="c0"
  >
    <div
      class="c1"
    >
      <a
        href="/workspaces/workspace-id/folders/folder-id"
      >
        <img
          src="/public/folderClosed.svg"
        />
        <div>
          folder title
        </div>
      </a>
    </div>
    <button>
      <div
        class="c2 c3"
      >
        <span
          class="c4 c5"
        >
          Options
        </span>
      </div>
    </button>
  </li>
</DocumentFragment>
`;
